# University-Programming

./: .gitignore  README.md
Algorithms and Data Structures/task 0.0/: README.md  main.cpp
Algorithms and Data Structures/task 0.1/: README.md  main.c
Algorithms and Data Structures/task 0.1 Matrices/: MatrixChain.java  main.c
Algorithms and Data Structures/task 0.1 adjacency matrix/: main.c
Algorithms and Data Structures/task 0.1 binary tree/: main.c
Algorithms and Data Structures/task 0.2/: README.md  main.c
Algorithms and Data Structures/task 0.2 delete from binary tree/: input.txt  main.c
Algorithms and Data Structures/task 0.2 is binary tree/: main.c
Algorithms and Data Structures/task 0.3 adjacency list/: Makefile  main.c
Algorithms and Data Structures/task 0.3 binomial heap/: main.c
Algorithms and Data Structures/task 0.3 canon tree from adjacency matrix/: .gitignore  main.c
Algorithms and Data Structures/task 0.3 check if tree is binary/: bst.in  main.c
Algorithms and Data Structures/task 0.4 FindSum Add/: main.c
Algorithms and Data Structures/task 0.5 road destruction/: input.txt  main.c
Algorithms and Data Structures/task 0.6 hash-table/: input.txt  main.c
Algorithms and Data Structures/task 0.8 BFS/: main.c
Algorithms and Data Structures/task 0.9 DFS/: main.c
Algorithms and Data Structures/task 0.A Dijkstra's algorithm/: main.c
Algorithms and Data Structures/task 32/: main.c  (+2 more)
Operating Systems/Lab5/: .gitignore  CMakeLists.txt  Client.c  Makefile  Server.c
Operating Systems/Lab5/src/: Client.c  Command.h  Employee.h  Server.c
(+193 files in other folders)
